if節でスクロール値が2000より大きい時はsidewrapにfixedクラスをaddClassしてサイドバーを固定する。2000以下の時は.fixedをremoveclassする

--- a/daiki/detai.css
+++ b/daiki/detai.css
@@ -10,6 +10,12 @@ body {
   font-family: "Hiragino kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", メイリオ, Meiryo, "ＭＳ Ｐゴシック", sans-serif;
 }
 
+.fixed {
+  position: fixed;
+  top: 0;
+  z-index: 10000;
+}
+
 div {
   display: block;
 }
@@ -401,6 +407,13 @@ ul {
   text-align: left;
   display: inline-block;
   width: 510px;
+}
+
+.fixed{
+  position: fixed;
+  right: 0;
+  z-index: -1;
+  
 }
 
 @media(max-width: 1000px){
